--- a/IdentityApi/Dockerfile
+++ b/IdentityApi/Dockerfile
@@ -20,4 +20,8 @@ RUN dotnet publish "IdentityApi.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "IdentityApi.dll"]
+#ENTRYPOINT ["dotnet", "IdentityApi.dll"]
+CMD ASPNETCORE_URLS=http://*:$PORT dotnet IdentityApi.dll
+
+#CMD export ASPNETCORE_URLS=http://*:$PORT
+#CMD ASPNETCORE_URLS=http://*:$PORT dotnet FuraFila.WebApp.dll
